tests/ivg/invalid/drawing_without_bounds.ivg
format IVG-3
define image foo [bounds 0,0,1,1]
image 0,0 foo
